test/scc_test/expr/semantic-errors/019.a
019.t:4:6: error: expression must have pointer-to-object type